blog bug fix on mobile

--- a/blog/css/theme_mobile.css
+++ b/blog/css/theme_mobile.css
@@ -45,7 +45,6 @@
 	}
 
 	.post footer {
-		text-align: center;
 	}
 
 	nav.prevandnext {
